riscv-pac/tests/ui/fail_no_unsafe.stderr
error: custom attribute panicked
 --> tests/ui/fail_no_unsafe.rs:1:1
  |
1 | #[riscv_pac::pac_enum(InterruptNumber)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Attribute does not start with 'unsafe'. Expected: 'riscv_pac::pac_enum(unsafe <PacTraitToImplement>)'
